# tour-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: salvage-backfill.yml  scrape-chunk.yml  scrape-stage.yml
config/: config.yaml
data/: README.md
data/2026/profiles/: profile-14-7cd66b6883091ae55eac33a73c6e4026.csv  profile-14-tiny-834ffcff770e3aca72553d1778212efa.csv  profile-15-1d34fac1919d6c39274d093321f16b1a.csv  profile-16-3aeb7040d3e761bc49bcd5841649861c.csv  (+6 more)
extension/: README.md  autocalibrate.js  manifest.json  navigator.css  navigator.js  probe.js  probe_main.js
extension/data/: index.json  profile-stage-01.json  profile-stage-02.json  profile-stage-03.json  profile-stage-04.json  profile-stage-05.json  profile-stage-06.json  profile-stage-07.json  profile-stage-08.json  profile-stage-09.json  profile-stage-10.json  profile-stage-11.json  profile-stage-12.json  profile-stage-13.json  profile-stage-18.json  profile-stage-20.json  profile-stage-21.json  stage-14.json  stage-15.json  stage-19.json
scripts/: com.tourtools.scraper.plist  crontab.example  install_systemd.sh  tour-scraper.service  tour-scraper.timer
src/tourscraper/: __main__.py  archive_stage.py  autodiscover.py  backfill.py  config.py  events_parse.py  har_discover.py  live_stream.py  polling.py  static_api.py  storage.py
src/tourscraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  extension_harness.html  mock_racecenter.py  test_extension_adbreaks.py  test_extension_calibration.py  test_extension_profile.py  test_extension_ui.py
(+98 files in other folders)
